# plugin

.github/workflows/: CMakeLists.txt  build.yml
.github/workflows/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
